--- a/SourceCode/styles/contact_styles.css
+++ b/SourceCode/styles/contact_styles.css
@@ -366,7 +366,8 @@ section
 {
 	width: 100%;
 	height: 121px;
-	background: #131a2f;
+	/*background: #131a2f;*/
+	background: lightsteelblue;
 	-webkit-transition: all 400ms ease;
 	-moz-transition: all 400ms ease;
 	-ms-transition: all 400ms ease;
@@ -400,28 +401,28 @@ section
 	color: #FFFFFF;
 	text-transform: uppercase;
 }
-.logo div:first-of-type
-{
-	font-size: 24px;
-	font-weight: 500;
-	line-height: 0.75;
-}
-.logo div:nth-child(2)
+/*.logo div:first-of-type*/
+/*{*/
+/*font-size: 24px;*/
+/*font-weight: 500;*/
+/*line-height: 0.75;*/
+/*}*/
+.logo div:nth-child(3)
 {
 	font-size: 10px;
 	font-weight: 500;
 	color: #929292;
 	letter-spacing: 0.13em;
 	margin-top: 2px;
-	padding-left: 2px;
+	padding-left: 0px;
 }
 .logo_image
 {
 	position: absolute;
 	top: -34px;
-	left: 41px;
-	width: 50px;
-	height: 41px;
+	left: 71px;
+	width: 90px;
+	height: 91px;
 	-webkit-transition: all 400ms ease;
 	-moz-transition: all 400ms ease;
 	-ms-transition: all 400ms ease;
