--- a/SourceCode/styles/about_styles.css
+++ b/SourceCode/styles/about_styles.css
@@ -255,7 +255,7 @@ section
 .home_content
 {
 	width: 100%;
-	height: 601px;
+	height: 651px;
 }
 .home_content_inner
 {
@@ -331,8 +331,8 @@ section
 .header_container
 {
 	width: 100%;
-	height: 121px;
-	background: lightsteelblue;
+	height: 75px;
+	background: #994d00;
 	-webkit-transition: all 400ms ease;
 	-moz-transition: all 400ms ease;
 	-ms-transition: all 400ms ease;
@@ -384,7 +384,7 @@ section
 .logo_image
 {
 	position: absolute;
-	top: -34px;
+	top: -20px;
 	left: 71px;
 	width: 90px;
 	height: 91px;
@@ -444,7 +444,7 @@ section
 	font-size: 15px;
 	font-weight: 400;
 	color: #FFFFFF;
-	line-height: 121px;
+	line-height: 75px;
 	padding-left: 22px;
 	padding-right: 22px;
 	-webkit-transition: all 200ms ease;
@@ -585,13 +585,6 @@ section
 } 
 .search_input:-ms-input-placeholder
 { 
-	font-size: 12px !important;
-	font-weight: 400 !important;
-	font-style: italic;
-	color: rgba(255, 255, 255, 0.5) !important;
-}
-.search_input::input-placeholder
-{
 	font-size: 12px !important;
 	font-weight: 400 !important;
 	font-style: italic;
@@ -1032,13 +1025,7 @@ section
 	font-style: italic;
 	color: #939393 !important;
 }
-.find_input::input-placeholder
-{
-	font-size: 14px !important;
-	font-weight: 400 !important;
-	font-style: italic;
-	color: #939393 !important;
-}
+
 
 /*********************************
 7. About
@@ -1363,13 +1350,6 @@ section
 } 
 .newsletter_input:-ms-input-placeholder
 { 
-	font-size: 14px !important;
-	font-weight: 400 !important;
-	font-style: italic;
-	color: #FFFFFF !important;
-}
-.newsletter_input::input-placeholder
-{
 	font-size: 14px !important;
 	font-weight: 400 !important;
 	font-style: italic;
