--- a/SourceCode/styles/main_styles.css
+++ b/SourceCode/styles/main_styles.css
@@ -310,8 +310,8 @@ section
 .header_container
 {
 	width: 100%;
-	height: 121px;
-	background: lightsteelblue;
+	height: 75px;
+	background: #994d00;
 	-webkit-transition: all 400ms ease;
 	-moz-transition: all 400ms ease;
 	-ms-transition: all 400ms ease;
@@ -363,7 +363,7 @@ section
 .logo_image
 {
 	position: absolute;
-	top: -34px;
+	top: -20px;
 	left: 71px;
 	width: 90px;
 	height: 91px;
@@ -423,7 +423,7 @@ section
 	font-size: 15px;
 	font-weight: 400;
 	color: #FFFFFF;
-	line-height: 121px;
+	line-height: 75px;
 	padding-left: 22px;
 	padding-right: 22px;
 	-webkit-transition: all 200ms ease;
@@ -564,13 +564,6 @@ section
 } 
 .search_input:-ms-input-placeholder
 { 
-	font-size: 12px !important;
-	font-weight: 400 !important;
-	font-style: italic;
-	color: rgba(255, 255, 255, 0.5) !important;
-}
-.search_input::input-placeholder
-{
 	font-size: 12px !important;
 	font-weight: 400 !important;
 	font-style: italic;
@@ -999,13 +992,6 @@ section
 } 
 .find_input:-ms-input-placeholder
 { 
-	font-size: 14px !important;
-	font-weight: 400 !important;
-	font-style: italic;
-	color: #939393 !important;
-}
-.find_input::input-placeholder
-{
 	font-size: 14px !important;
 	font-weight: 400 !important;
 	font-style: italic;
@@ -1485,13 +1471,7 @@ section
 	font-style: italic;
 	color: #FFFFFF !important;
 }
-.newsletter_input::input-placeholder
-{
-	font-size: 14px !important;
-	font-weight: 400 !important;
-	font-style: italic;
-	color: #FFFFFF !important;
-}
+
 
 /*********************************
 13. Footer
