--- a/SourceCode/styles/contact_styles.css
+++ b/SourceCode/styles/contact_styles.css
@@ -446,7 +446,7 @@ section
 .main_nav
 {
 	/*height: 100%;*/
-	padding-right: 173px;
+	padding-right: 43px;
 }
 .main_nav_list
 {
@@ -456,9 +456,9 @@ section
 {
 	display: inline-block;
 	position: relative;
-	/*padding-left: 22px;
-	padding-right: 22px;*/
-	margin-right: -4px;
+	padding-left: 7px;
+	/*padding-right: 22px;*!*/
+	margin-right: -30px;
 	padding-top: 2px;
 }
 .main_nav_item.active::after
@@ -1457,3 +1457,12 @@ section
 {
 	background: rgba(254,60,82,0.8);
 }
+
+
+/* Custom */
+
+.tftable {font-size:14px;color:#333333;width:100%;border-width: 1px;border-color: #729ea5;border-collapse: collapse;}
+.tftable th {font-size:14px;background-color:#acc8cc;border-width: 2px;padding: 8px;border-style: solid;border-color: #729ea5;text-align:left;}
+.tftable tr {background-color:#d4e3e5;}
+.tftable td {font-size:13px;border-width:1px;padding:8px;border-style: solid;border-color: #729ea5;}
+.tftable tr:hover {background-color:#ffffff;}
