--- a/SourceCode/styles/main_styles.css
+++ b/SourceCode/styles/main_styles.css
@@ -358,7 +358,7 @@ section
 .main_nav
 {
 	/*height: 100%;*/
-	padding-right: 173px;
+	padding-right: 43px;
 }
 .main_nav_list
 {
@@ -368,9 +368,9 @@ section
 {
 	display: inline-block;
 	position: relative;
-	/*padding-left: 22px;
-	padding-right: 22px;*/
-	margin-right: -4px;
+	padding-left: 7px;
+	/*padding-right: 22px;*!*/
+	margin-right: -30px;
 	padding-top: 2px;
 }
 .main_nav_item.active::after
